--- a/Pagina_da_receita/index.html
+++ b/Pagina_da_receita/index.html
@@ -30,7 +30,7 @@ sem parar, com uma única receita. E é tudo muito simples. Basta você preparar
 miojo, misturar a batata cozida amassada, adicionar salame, parmesão e mussarela, 
 empanar e colocar para fritar.
 
-<a href="bolinho.html" target='_blank'>Clique para ver a receita de forma mais detalhada</a>
+<a href="bolinho.html">Clique para ver a receita de forma mais detalhada</a>
 		</pre>
   		</p>
   	</div>
